--- a/docker/docker-compose-debug.yml
+++ b/docker/docker-compose-debug.yml
@@ -19,7 +19,7 @@ services:
     volumes:
       - ./data/mysql:/var/lib/mysql
       - ./volumes/mysql/schema.sql:/docker-entrypoint-initdb.d/init.sql
-      - ./atlas/migrations:/atlas-migrations:ro  
+      - ./atlas/opencoze_latest_schema.hcl:/opencoze_latest_schema.hcl:ro
     entrypoint:  
       - bash
       - -c
@@ -54,10 +54,10 @@ services:
           echo 'Atlas CLI already installed'
         fi
         
-        if [ -d '/atlas-migrations' ] && [ "$$(ls -A /atlas-migrations)" ]; then
+        if [ -f '/opencoze_latest_schema.hcl' ]; then
           echo 'Running Atlas migrations...'
           ATLAS_URL="mysql://$${MYSQL_USER}:$${MYSQL_PASSWORD}@localhost:3306/$${MYSQL_DATABASE}"
-          atlas migrate apply --url "$$ATLAS_URL" --dir "file:///atlas-migrations" --allow-dirty
+          atlas schema apply -u "$ATLAS_URL" --to "file:///opencoze_latest_schema.hcl" --exclude "atlas_schema_revisions,table_*" --auto-approve
           echo 'Atlas migrations completed successfully'
         else
           echo 'No migrations found'
