--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -53,10 +53,10 @@ services:
           echo 'Atlas CLI already installed'
         fi
         
-        if [ -d '/atlas-migrations' ] && [ "$$(ls -A /atlas-migrations)" ]; then
+        if [ -f '/opencoze_latest_schema.hcl' ]; then
           echo 'Running Atlas migrations...'
           ATLAS_URL="mysql://$${MYSQL_USER}:$${MYSQL_PASSWORD}@localhost:3306/$${MYSQL_DATABASE}"
-          atlas schema apply -u "$ATLAS_URL" --to "file:///opencoze_latest_schema.hcl" --auto-approve
+          atlas schema apply -u "$ATLAS_URL" --to "file:///opencoze_latest_schema.hcl" --exclude "atlas_schema_revisions,table_*" --auto-approve
           echo 'Atlas migrations completed successfully'
         else
           echo 'No migrations found'
